removed root and font vars from build

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "UI Components for mobile applications like the PhoneGap Developer App",
   "main": "index.js",
   "scripts": {
-    "build:button:desktop": "rsn -n topcoat -o ./css/button-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts,topcoat-root] ./components/button.css",
-    "build:button:mobile": "rsn -n topcoat -o ./css/button-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts,topcoat-root] ./components/button.css",
-    "build:select:desktop": "rsn -n topcoat -o ./css/select-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts,topcoat-root] ./components/select.css",
-    "build:select:mobile": "rsn -n topcoat -o ./css/select-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts,topcoat-root] ./components/select.css",
+    "build:button:desktop": "rsn -n topcoat -o ./css/button-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts] ./components/button.css",
+    "build:button:mobile": "rsn -n topcoat -o ./css/button-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts] ./components/button.css",
+    "build:select:desktop": "rsn -n topcoat -o ./css/select-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts] ./components/select.css",
+    "build:select:mobile": "rsn -n topcoat -o ./css/select-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts] ./components/select.css",
     "build": "rm -rfv ./css/* && npm run build:button:desktop && npm run build:select:desktop && npm run build:button:mobile && npm run build:select:mobile",
     "topdoc": "npm run build && rm -rfv ./docs/* && topdoc -s ./css -d ./docs -p 'Topcoat Button' -t './node_modules/topdoc-theme'"
   },
