--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "build:button:desktop": "rsn -n topcoat -o ./css/button-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts] ./components/button.css",
     "build:button:mobile": "rsn -n topcoat -o ./css/button-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts] ./components/button.css",
-    "build:select:desktop": "rsn -n topcoat -o ./css/select-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts] ./components/select.css",
-    "build:select:mobile": "rsn -n topcoat -o ./css/select-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts] ./components/select.css",
+    "build:combobox:desktop": "rsn -n topcoat -o ./css/combobox-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts] ./components/combobox.css",
+    "build:combobox:mobile": "rsn -n topcoat -o ./css/combobox-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts] ./components/combobox.css",
     "build:tab-bar:desktop": "rsn -n topcoat -o ./css/tab-bar-desktop.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/desktop.css,topcoat-fonts] ./components/tab-bar.css",
     "build:tab-bar:mobile": "rsn -n topcoat -o ./css/tab-bar-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css,topcoat-fonts] ./components/tab-bar.css",
-    "build": "rm -rfv ./css/* && npm run build:button:desktop && npm run build:select:desktop && npm run build:button:mobile && npm run build:select:mobile && npm run build:tab-bar:mobile && npm run build:tab-bar:desktop",
+    "build": "rm -rfv ./css/* && npm run build:button:desktop && npm run build:combobox:desktop && npm run build:button:mobile && npm run build:combobox:mobile && npm run build:tab-bar:mobile && npm run build:tab-bar:desktop",
     "topdoc": "npm run build && rm -rfv ./docs/* && topdoc -s ./css -d ./docs -p 'Topcoat Button' -t './node_modules/topdoc-theme'"
   },
   "repository": {
@@ -32,7 +32,7 @@
     "topcoat-button-bar-base": "^1.0.0",
     "topcoat-fonts": "^0.3.0",
     "topcoat-root": "^1.0.0",
-    "topcoat-select-base": "^0.1.0",
+    "topcoat-combobox-base": "^0.1.0",
     "topcoat-tab-bar": "^1.1.0",
     "topcoat-variables-dark": "^1.1.2",
     "topcoat-variables-desktop": "^1.1.0",
