--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:tab-bar:mobile": "rsn -n topcoat -o ./css/tab-bar-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css] ./components/tab-bar.css",
     "build:navigation-bar:mobile": "rsn -n topcoat -o ./css/navigation-bar-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css] ./components/navigation-bar.css",
     "build:list:mobile": "rsn -n topcoat -o ./css/list-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css] ./components/list.css",
-    "build": "rm -rfv ./css/* && npm run build:root:mobile && npm run build:button:mobile && npm run build:combobox:mobile && npm run build:tab-bar:mobile && npm run build:navigation-bar:mobile && npm run build:list:mobile",
+    "build:icon-button:mobile": "rsn -n topcoat -o ./css/icon-button-mobile.css -p [topcoat-variables-shared,topcoat-variables-desktop,topcoat-variables-dark,./variables/mobile.css] ./components/icon-button.css",
+    "build": "rm -rfv ./css/* && npm run build:root:mobile && npm run build:button:mobile && npm run build:combobox:mobile && npm run build:tab-bar:mobile && npm run build:navigation-bar:mobile && npm run build:list:mobile && npm run build:icon-button:mobile",
     "topdoc": "npm run build && rm -rfv ./docs/* && topdoc",
     "prepublish": "npm run topdoc"
   },
